tests/snapshots/bundled__bundled_superset_env_explain.snap
---
source: tests/bundled.rs
expression: "support::stderr_text(&output)"
---
terminal ships with Nerd Font support by default
