tests/snapshots/bundled__bundled_superset_json.snap
---
source: tests/bundled.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": null,
  "detected": true,
  "font": null,
  "profile": null,
  "source": "bundled_terminal",
  "terminal": "superset"
}
